2002-08-08  Will Cohen  <wcohen@nc.rr.com>

	* utils/op_start: Do not compute quantity of counters from
	  CPUTYPE. Get counter names directly from /proc/sys/dev/oprofile.

2002-08-06  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.in:
	* doc/Makefile.in: delete generated doc only on a make maintainerclean

	* pp/opp_symbol.cpp: small cleanup

2002-08-06  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_parse.c:
	* dae/opd_proc.c:
	* dae/opd_proc.h: fix #591275 which is a re-hash of #584723 we can
	  now safely assume than proc->maps[0] is the primary image.
	  Problem reported by William cohen

2002-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: separate_token() treat escape sequence

2002-07-30  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: apply misssing part from this patch
	  2002-07-27  Will Cohen  <wcohen@nc.rr.com>

	* dae/oprofiled.c:
	* doc/oprofile.1.in:
	* util/oprof_start:
	* doc/oprofile.xml: clarify than pgrp filter is the tty program
	  group id

2002-07-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.h:
	* pp/samples_file.cpp: op_get_cpu_nr_counters() / op_get_nr_counters()
	  merge

	* module/compat22.h:
	* module/x68/op_apic.c: __cli()/__sti() removal, this fix build up
	  to 2.5.29

	* module/op_fixmap.c: fix test_bit() warning

2002-07-27  Will Cohen  <wcohen@nc.rr.com>
 
	* gui/oprof_start_config.cpp: config_setting::config_setting()
	  uses uname to guess path to vmlinux. 

2002-07-27  John Levon  <levon@movementarian.org>

	* dae/opd_stats.h:
	* dae/opd_stats.c: 
	* dae/opd_proc.c: log unique samples vs. sample entries
 
2002-07-27  Will Cohen  <wcohen@nc.rr.com>
 
	* dae/oprofiled.c:
	* gui/oprof_start.cpp:
	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: op_get_nr_counter() new, localize
	  op_nr_counter computations.

2002-07-26  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update
