@@ -1,3 +1,8 @@
+2002-08-14  William Cohen  <wcohen@nc.rr.com>
+ 
+	* libutil/op_fileio.c (op_read_file): Change fprintf specifier.
+	(op_write_file): Ditto.
+
 2002-08-08  Will Cohen  <wcohen@nc.rr.com>
 
 	* utils/op_start: Do not compute quantity of counters from
